<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity"
    android:background="@drawable/img1">

    <TextView
        android:id="@+id/mainText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="Simple-Jack"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeButton3"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/ic_menu_revert"
        android:backgroundTint="#fcba03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="2dp"
            android:layout_marginStart="200dp"
            android:layout_weight="2"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:fontFamily="casual"
                android:text="BALANCE: "
                android:textColor="#fcba03"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/balanceValue"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:fontFamily="casual"
                android:textColor="#fcba03"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_weight="5"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/dealerHandScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:textColor="#ffff00" />

                <LinearLayout
                    android:id="@+id/dealerHandLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="317dp"
                android:layout_height="41dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/playerHandScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:textColor="#ffff00" />

                <LinearLayout
                    android:id="@+id/playerHandLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_gameCommand"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button"
                    android:background="#fcba03"
                    android:id="@+id/buttonHit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/hit" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button"
                    android:background="#fcba03"
                    android:id="@+id/buttonStand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/stand" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/Widget.AppCompat.Button"
                        android:background="#fcba03"
                        android:id="@+id/buttonClear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/clear" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/Widget.AppCompat.Button"
                        android:background="#fcba03"
                        android:id="@+id/buttonDeal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:fontFamily="casual"
                        android:text="@string/deal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/bet5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/chip_5" />
                    <ImageView
                        android:id="@+id/bet10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/chip_10" />

                    <ImageView
                        android:id="@+id/bet20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/chip_20" />

                    <ImageView
                        android:id="@+id/bet50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/chip_50" />

                    <ImageView
                        android:id="@+id/bet100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        app:srcCompat="@drawable/chip_100" />

                </LinearLayout>

                <TextView
                    android:id="@+id/betText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:text="@string/bet"
                    android:textColor="#fcba03"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/betValue"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:textColor="#fcba03"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>